<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pokedex</string>
    <string name="error_default">Unknown error</string>
    <string name="list_detail_placeholder">Select a Pokémon from the list to see details</string>
    <string name="base_stats">Base Stats</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="height_format">%1$.1f m</string>
    <string name="weight_format">%1$.1f kg</string>
    <string name="cd_back">Back</string>
    <string name="cd_pokemon_image">Image of %1$s</string>
    <string name="search_hint">Search Pokémon...</string>
    <string name="cd_add_favorite">Add to favorites</string>
    <string name="cd_remove_favorite">Remove from favorites</string>
    <string name="cd_play_cry">Play cry</string>
    <string name="error_playback">Unable to play this Pokémon cry</string>
    <string name="filter_favorites">Favorites</string>

    <!-- Auth & Profile -->
    <string name="auth_sign_in">Sign In</string>
    <string name="auth_sign_up">Sign Up</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_google_sign_in">Sign in with Google</string>
    <string name="auth_toggle_to_sign_up">Don\'t have an account? Sign Up</string>
    <string name="auth_toggle_to_sign_in">Already have an account? Sign In</string>
    <string name="auth_hide_password">Hide password</string>
    <string name="auth_show_password">Show password</string>
    <string name="profile_title">Profile</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_not_logged_in">Not logged in</string>
    <string name="error_auth_failed">Authentication failed</string>
    <string name="retry">Retry</string>
    <string name="filter_all">All</string>

    <string name="error_loading">Loading error</string>
    <string name="widget_favorite_title">Your Favorite</string>
    <string name="widget_default_title">Pokedex</string>
    <string name="widget_default_subtitle">Catch \'em all!</string>
    <string name="favorite_empty_state">No favorite Pokémon</string>
    <string name="pokemon_empty_state">No Pokémon match the current filters.</string>
    <string name="error_with_detail">Error: %1$s</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_favorites">Favorites</string>
    <string name="navigation_profile">Profile</string>

</resources>
